--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,11 +27,12 @@ layout: default
         </div>
       </div>
     </div>
-    <div class="column one-fourths mobile-hidden">
+    <!-- 评论区域 -->
+    <!-- <div class="column one-fourths mobile-hidden">
       <div class="collection-title">
         {% include sidebar-qrcode.html %}
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 </section>
