--- a/_includes/sidebar-popular-repo.html
+++ b/_includes/sidebar-popular-repo.html
@@ -1,3 +1,4 @@
+<!-- 我的仓库 -->
 <h3>My Popular Repositories</h3>
 {% if site.github.public_repositories != false %}
 {% assign repos = site.github.public_repositories | sort: "stargazers_count" | reverse %}
