--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,9 +49,10 @@ layout: default
       {% include sns-share.html %}
     </div>
     {% include content-footer-ad.html %}
-    <div class="comment">
+    <!-- 评论模块 -->
+    <!-- <div class="comment">
       {% include comments.html %}
-    </div>
+    </div> -->
   </div>
   <div class="column one-fourth">
     {% include sidebar-search.html %}
