--- a/_includes/sidebar-popular-repo.html
+++ b/_includes/sidebar-popular-repo.html
@@ -1,35 +1,31 @@
 <!-- 我的仓库 -->
-<h3>My Popular Repositories</h3>
-{% if site.github.public_repositories != false %}
-{% assign repos = site.github.public_repositories | sort: "stargazers_count" | reverse %}
-{% for repo in repos | limit: site.side_bar_repo_limit %}
-<a href="{{ repo.html_url }}" target="_blank" class="card text-center">
+<h3>热门推荐</h3>
+
+<a href="#" target="_blank" class="card text-center">
     <div class="thumbnail">
-        <div class="card-image geopattern" data-pattern-id="{{ repo.name }}">
+        <div class="card-image geopattern" data-pattern-id="aaa">
             <div class="card-image-cell">
                 <h3 class="card-title">
-                    {{ repo.name }}
+                    测试
                 </h3>
             </div>
         </div>
         <div class="caption">
             <div class="card-description">
-                <p class="card-text">{{ repo.description }}</p>
+                <p class="card-text">描述</p>
             </div>
             <div class="card-text">
-                <span class="meta-info" title="{{ repo.stargazers_count }} stars">
-                    <span class="octicon octicon-star"></span> {{ repo.stargazers_count }}
+                <span class="meta-info" title="a stars">
+                    <span class="octicon octicon-star"></span> 1
                 </span>
-                <span class="meta-info" title="{{ repo.forks_count }} forks">
-                    <span class="octicon octicon-git-branch"></span> {{ repo.forks_count }}
+                <span class="meta-info" title="a forks">
+                    <span class="octicon octicon-git-branch"></span> 2
                 </span>
-                <span class="meta-info" title="Last updated：{{ repo.updated_at }}">
+                <span class="meta-info" title="Last updated：a">
                     <span class="octicon octicon-clock"></span>
-                    <time datetime="{{ repo.updated_at }}">{{ repo.updated_at | date: '%Y-%m-%d' }}</time>
+                    <time datetime="a">2020-05-08</time>
                 </span>
             </div>
         </div>
     </div>
 </a>
-{% endfor %}
-{% endif %}
