--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,11 +28,11 @@ layout: default
       </div>
     </div>
     <!-- 评论区域 -->
-    <!-- <div class="column one-fourths mobile-hidden">
+    <div class="column one-fourths mobile-hidden">
       <div class="collection-title">
         {% include sidebar-qrcode.html %}
       </div>
-    </div> -->
+    </div>
   </div>
 </div>
 </section>
