--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,6 +27,7 @@ layout: default
         </div>
       </div>
     </div>
+    <h1>hello world</h1>
     <!-- 评论区域 -->
     <div class="column one-fourths mobile-hidden">
       <div class="collection-title">
