--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,8 +27,6 @@ layout: default
         </div>
       </div>
     </div>
-    <h1>hello world</h1>
-    <!-- 评论区域 -->
     <div class="column one-fourths mobile-hidden">
       <div class="collection-title">
         {% include sidebar-qrcode.html %}
@@ -51,9 +49,9 @@ layout: default
     </div>
     {% include content-footer-ad.html %}
     <!-- 评论模块 -->
-    <!-- <div class="comment">
+    <div class="comment">
       {% include comments.html %}
-    </div> -->
+    </div>
   </div>
   <div class="column one-fourth">
     {% include sidebar-search.html %}
