--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,9 +48,8 @@ layout: default
       {% include sns-share.html %}
     </div>
     {% include content-footer-ad.html %}
-    <!-- 评论模块 -->
     <div class="comment">
-      {% include comments.html %}
+      <!-- {% include comments.html %} -->
     </div>
   </div>
   <div class="column one-fourth">
