--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,7 +49,7 @@ layout: default
     </div>
     {% include content-footer-ad.html %}
     <div class="comment">
-      <!-- {% include comments.html %} -->
+      {% include comments.html %}
     </div>
   </div>
   <div class="column one-fourth">
