--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,12 +6,12 @@
             <div class="copyright left mobile-block">
                     © 2015
                     <span title="{{ site.author}}">{{ site.author }}</span>
-                    <a href="javascript:window.scrollTo(0,0)" class="right mobile-visible">TOP</a>
+                    <a href="javascript:window.scrollTo(0,0)" class="right mobile-visible">Go TOP</a>
             </div>
 
             <ul class="site-footer-links right mobile-hidden">
                 <li>
-                    <a href="javascript:window.scrollTo(0,0)" >TOP</a>
+                    <a href="javascript:window.scrollTo(0,0)" >Go TOP</a>
                 </li>
             </ul>
             <a href="{{ site.github.repository_url }}" target="_blank" aria-label="view source code">
