--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,9 @@
 
         <div class="site-footer" role="contentinfo">
             <div class="copyright left mobile-block">
-                    © 2015
+                    © <script>
+                      document.write(new Date().getFullYear())
+                    </script>
                     <span title="{{ site.author}}">{{ site.author }}</span>
                     <a href="javascript:window.scrollTo(0,0)" class="right mobile-visible">Go TOP</a>
             </div>
