--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,10 @@
 layout: default
 ---
 
-{% assign assets_base_url = site.url %} {% if site.cdn.jsdelivr.enabled %} {%
-assign assets_base_url = "https://cdn.jsdelivr.net/gh/" | append:
-site.repository %} {% endif %}
+{% assign assets_base_url = site.url %} 
+{% if site.cdn.jsdelivr.enabled %} 
+  {% assign assets_base_url = "https://cdn.jsdelivr.net/gh/" | append:site.repository %} 
+{% endif %}
 <section
   class="collection-head small geopattern"
   data-pattern-id="{{ page.title | truncate: 15, ''}}"
