--- a/_includes/sidebar-search.html
+++ b/_includes/sidebar-search.html
@@ -19,8 +19,5 @@ SimpleJekyllSearch({
     fuzzy: false,
     exclude: ['Welcome']
 })
-</script>
-
-<script type="text/javascript">
-console.log({{site}})
+    console.log(SimpleJekyllSearch)
 </script>
