--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -90,5 +90,7 @@
       </script>
     </div>
     {% endif %}
+    <!-- 站长统计 -->
+    <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1278104206'%3E%3C/span%3E%3Cscript src='https://s9.cnzz.com/z_stat.php%3Fid%3D1278104206%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
 </body>
 </html>
