--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,9 +17,9 @@
                     <a href="javascript:window.scrollTo(0,0)" >Go TOP</a>
                 </li>
             </ul>
-            <a href="{{ site.github.repository_url }}" target="_blank" aria-label="view source code">
+            <!-- <a href="{{ site.github.repository_url }}" target="_blank" aria-label="view source code">
                 <span class="mega-octicon octicon-mark-github" title="GitHub"></span>
-            </a>
+            </a> -->
             <ul class="site-footer-links mobile-hidden">
                 {% for nav in site.navs %}
                 <li>
@@ -76,7 +76,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/mathjax/MathJax@2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     {% endif %}
 
-    {% if site.google.analytics_id %}
+    <!-- {% if site.google.analytics_id %}
     <div style="display:none">
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -89,8 +89,6 @@
 
       </script>
     </div>
-    {% endif %}
-    <!-- 站长统计 -->
-    <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1278104206'%3E%3C/span%3E%3Cscript src='https://s9.cnzz.com/z_stat.php%3Fid%3D1278104206%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
+    {% endif %} -->
 </body>
 </html>
