--- a/_includes/visit-stat.html
+++ b/_includes/visit-stat.html
@@ -21,8 +21,8 @@
 </div>
 {% endif %}
 
-<span id="runtime"></span>
-<script language=javascript>
+<span id="runtime">111</span>
+<script type="text/javascript">
     function runTime(){
         window.setTimeout("runTime()", 1000);
         var seconds = 1000;
