--- a/_includes/visit-stat.html
+++ b/_includes/visit-stat.html
@@ -24,7 +24,6 @@
 <span id="runtime">111</span>
 <script type="text/javascript">
     function runTime(){
-        window.setTimeout("runTime()", 1000);
         var seconds = 1000;
         var minutes = seconds * 60;
         var hours = minutes * 60;
@@ -57,5 +56,5 @@
         var diffSeconds = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours-diffMinutes*minutes)/seconds);
         document.getElementById("runtime").innerHTML=" 已运行"+diffYears+" 年 "+diffDays+" 天 "+diffHours+" 小时 "+diffMinutes+" 分钟 "+diffSeconds+" 秒";
     }
-    runTime();
+    window.setTimeout(runTime(), 1000);
 </script>
