--- a/_includes/visit-stat.html
+++ b/_includes/visit-stat.html
@@ -21,7 +21,7 @@
 </div>
 {% endif %}
 
-<span id="runtime">111</span>
+<span id="runtime">222</span>
 <script type="text/javascript">
     function runTime(){
         var seconds = 1000;
@@ -55,6 +55,8 @@
         var diffMinutes = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours)/minutes);
         var diffSeconds = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours-diffMinutes*minutes)/seconds);
         document.getElementById("runtime").innerHTML=" 已运行"+diffYears+" 年 "+diffDays+" 天 "+diffHours+" 小时 "+diffMinutes+" 分钟 "+diffSeconds+" 秒";
+        console.log('time')
     }
     window.setTimeout(runTime(), 1000);
+  console.log('end')
 </script>
