--- a/_includes/visit-stat.html
+++ b/_includes/visit-stat.html
@@ -21,11 +21,11 @@
 </div>
 {% endif %}
 
-<span id="runtime">222</span>
+<span id="runtime">333</span>
 <script type="text/javascript">
     function runTime(){
       
     }
-    window.setTimeout(runTime(), 1000);
+    //window.setTimeout(runTime(), 1000);
   console.log('end')
 </script>
