--- a/_includes/visit-stat.html
+++ b/_includes/visit-stat.html
@@ -24,8 +24,8 @@
 <span id="runtime">333</span>
 <script type="text/javascript">
     function runTime(){
-      
+      console.log('time')
     }
-    //window.setTimeout(runTime(), 1000);
+    window.setInterval(runTime(), 1000);
   console.log('end')
 </script>
