--- a/_includes/visit-stat.html
+++ b/_includes/visit-stat.html
@@ -26,7 +26,6 @@
     function runTime(){
       console.log('time')
     }
-    setInterval(runTime(), 1000);
-  setInterval('console.log("Hello");', 3000);
+  setInterval('runTime();', 1000);
   console.log('end')
 </script>
