--- a/_includes/visit-stat.html
+++ b/_includes/visit-stat.html
@@ -54,8 +54,9 @@
         var diffHours = Math.floor((diff-(diffYears*365+diffDays)*days)/hours);
         var diffMinutes = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours)/minutes);
         var diffSeconds = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours-diffMinutes*minutes)/seconds);
-        var finallyShowTime = "已运行"+diffYears+" 年 "+diffDays+" 天 "+diffHours+" 小时 "+diffMinutes+" 分钟 "+diffSeconds+" 秒";
-        document.getElementById("runtime").innerHTML= finallyShowTime
+        //var finallyShowTime = "已运行"+diffYears+" 年 "+diffDays+" 天 "+diffHours+" 小时 "+diffMinutes+" 分钟 "+diffSeconds+" 秒";
+        var finallyShowTime =   "12321321321321"
+      document.getElementById("runtime").innerHTML= finallyShowTime
         console.log(finallyShowTime)
     }
   setInterval('runTime();', 1000);
