--- a/_includes/visit-stat.html
+++ b/_includes/visit-stat.html
@@ -30,12 +30,15 @@
         var days = hours * 24;
         var years = days * 365;
         var today = new Date();
+      console.log(today)
+        /*
         var todayYear = today.getFullYear();
         var todayMonth = today.getMonth()+1;
         var todayDate = today.getDate();
         var todayHour = today.getHours();
         var todayMinute = today.getMinutes();
         var todaySecond = today.getSeconds();
+        */
         /* 
         Date.UTC() -- 返回date对象距世界标准时间(UTC)1970年1月1日午夜之间的毫秒数(时间戳)
         year - 作为date对象的年份，为4位年份值
@@ -57,10 +60,10 @@
         var diffSeconds = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours-diffMinutes*minutes)/seconds);
         //var finallyShowTime = "已运行"+diffYears+" 年 "+diffDays+" 天 "+diffHours+" 小时 "+diffMinutes+" 分钟 "+diffSeconds+" 秒";
         */
-        var finallyShowTime =   "12321321321321"
-      document.getElementById("runtime").innerHTML= finallyShowTime
-        console.log(finallyShowTime)
+        var finallyShowTime =   "12321321321321";
+        document.getElementById("runtime").innerHTML= finallyShowTime;
+        console.log(finallyShowTime);
     }
   setInterval('runTime();', 1000);
-  console.log('end')
+  console.log('end');
 </script>
