--- a/_includes/visit-stat.html
+++ b/_includes/visit-stat.html
@@ -21,7 +21,7 @@
 </div>
 {% endif %}
 
-<span id="runtime">444</span>
+<span id="runtime">555</span>
 <script type="text/javascript">
     function runTime(){
         var seconds = 1000;
@@ -60,8 +60,8 @@
         var diffSeconds = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours-diffMinutes*minutes)/seconds);
         //var finallyShowTime = "已运行"+diffYears+" 年 "+diffDays+" 天 "+diffHours+" 小时 "+diffMinutes+" 分钟 "+diffSeconds+" 秒";
         */
-        var finallyShowTime =   "12321321321321";
-        document.getElementById("runtime").innerHTML= finallyShowTime;
+        var finallyShowTime="12321321321321";
+        document.getElementById("runtime").innerHTML=finallyShowTime;
         console.log(finallyShowTime);
     }
   setInterval('runTime();', 1000);
