--- a/_includes/visit-stat.html
+++ b/_includes/visit-stat.html
@@ -21,18 +21,18 @@
 </div>
 {% endif %}
 
-<span id="runtime">555</span>
+<span id="runtime">666</span>
 <script type="text/javascript">
     function runTime(){
-        /*
+        
         var seconds = 1000;
-        var minutes = seconds * 60;
-        var hours = minutes * 60;
-        var days = hours * 24;
-        var years = days * 365;
+        var minutes = 1000 * 60;
+        var hours = 1000 * 60 * 60;
+        var days = 1000 * 60 * 60 * 24;
+        var years = 1000 * 60 * 60 * 24 * 365;
         var today = new Date();
         console.log(today)
-        */
+        
         /*
         var todayYear = today.getFullYear();
         var todayMonth = today.getMonth()+1;
