--- a/_includes/visit-stat.html
+++ b/_includes/visit-stat.html
@@ -31,7 +31,7 @@
         var days = 1000 * 60 * 60 * 24;
         var years = 1000 * 60 * 60 * 24 * 365;
         var today = new Date();
-        console.log(today)
+        console.log(today);
         
         /*
         var todayYear = today.getFullYear();
