--- a/_includes/visit-stat.html
+++ b/_includes/visit-stat.html
@@ -21,15 +21,22 @@
 </div>
 {% endif %}
 
-<span id="runtime">888</span>
+<span id="runtime">999</span>
 <script type="text/javascript">
     function runTime(){
-        
+        /*
         var seconds = 1000;
         var minutes = seconds * 60;
         var hours = minutes * 60;
         var days = hours * 24;
         var years = days * 365;
+      */
+      var seconds = 1000;
+        var minutes = 1000 * 60;
+        var hours = 1000 * 60 * 60;
+        var days =  1000 * 60 * 60 * 24;
+        var years = 1000 * 60 * 60 * 24 * 365;
+      
         var today = new Date();
         console.log(today);
         
