--- a/_includes/visit-stat.html
+++ b/_includes/visit-stat.html
@@ -21,7 +21,7 @@
 </div>
 {% endif %}
 
-<span id="runtime">999</span>
+<span id="runtime">1000</span>
 <script type="text/javascript">
     function runTime(){
         /*
@@ -60,13 +60,13 @@
         */
       
         var t1 = Date.UTC(2016,12,01,00,00,00); //北京时间2016-12-1 00:00:00
-        var t2 = Date.UTC(todayYear,todayMonth,todayDate,todayHour,todayMinute,todaySecond);
-        var diff = t2-t1;
-        var diffYears = Math.floor(diff/years);
-        var diffDays = Math.floor((diff/days)-diffYears*365);
-        var diffHours = Math.floor((diff-(diffYears*365+diffDays)*days)/hours);
-        var diffMinutes = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours)/minutes);
-        var diffSeconds = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours-diffMinutes*minutes)/seconds);
+        //var t2 = Date.UTC(todayYear,todayMonth,todayDate,todayHour,todayMinute,todaySecond);
+        //var diff = t2-t1;
+        //var diffYears = Math.floor(diff/years);
+        //var diffDays = Math.floor((diff/days)-diffYears*365);
+        //var diffHours = Math.floor((diff-(diffYears*365+diffDays)*days)/hours);
+        //var diffMinutes = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours)/minutes);
+        //var diffSeconds = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours-diffMinutes*minutes)/seconds);
         //var finallyShowTime = "已运行"+diffYears+" 年 "+diffDays+" 天 "+diffHours+" 小时 "+diffMinutes+" 分钟 "+diffSeconds+" 秒";
         
         var finallyShowTime="12321321321321";
