--- a/_includes/visit-stat.html
+++ b/_includes/visit-stat.html
@@ -21,7 +21,9 @@
 </div>
 {% endif %}
 
-<span id="runtime">1000</span>
+<div>
+<span id="runtime">1001</span>
+</div>
 <script type="text/javascript">
     function runTime(){
         /*
@@ -31,7 +33,7 @@
         var days = hours * 24;
         var years = days * 365;
       */
-      var seconds = 1000;
+        var seconds = 1000;
         var minutes = 1000 * 60;
         var hours = 1000 * 60 * 60;
         var days =  1000 * 60 * 60 * 24;
