--- a/_includes/visit-stat.html
+++ b/_includes/visit-stat.html
@@ -26,30 +26,18 @@
 </div>
 <script type="text/javascript">
     function runTime(){
-        /*
-        var seconds = 1000;
-        var minutes = seconds * 60;
-        var hours = minutes * 60;
-        var days = hours * 24;
-        var years = days * 365;
-      */
-        var seconds = 1000;
+         var seconds = 1000;
         var minutes = 1000 * 60;
         var hours = 1000 * 60 * 60;
         var days =  1000 * 60 * 60 * 24;
         var years = 1000 * 60 * 60 * 24 * 365;
-      
         var today = new Date();
-        console.log(today);
-        
-        
         var todayYear = today.getFullYear();
         var todayMonth = today.getMonth() + 1;
         var todayDate = today.getDate();
         var todayHour = today.getHours();
         var todayMinute = today.getMinutes();
         var todaySecond = today.getSeconds();
-       
         /* 
         Date.UTC() -- 返回date对象距世界标准时间(UTC)1970年1月1日午夜之间的毫秒数(时间戳)
         year - 作为date对象的年份，为4位年份值
@@ -60,20 +48,16 @@
         seconds - 0-59之间的整数，做为date对象的秒数
         microseconds - 0-999之间的整数，做为date对象的毫秒数
         */
-        //console.log(todayYear);
-        //var t1 = Date.UTC(2016,12,01,00,00,00);//北京时间2016-12-1 00:00:00
-        //var t2 = Date.UTC(todayYear,todayMonth,todayDate,todayHour,todayMinute,todaySecond);
-        //var diff = t2-t1;
-        //var diffYears = Math.floor(diff/years);
-        //var diffDays = Math.floor((diff/days)-diffYears*365);
-        //var diffHours = Math.floor((diff-(diffYears*365+diffDays)*days)/hours);
-        //var diffMinutes = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours)/minutes);
-        //var diffSeconds = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours-diffMinutes*minutes)/seconds);
-        //var finallyShowTime = "已运行"+diffYears+" 年 "+diffDays+" 天 "+diffHours+" 小时 "+diffMinutes+" 分钟 "+diffSeconds+" 秒";
-        
-        var finallyShowTime="12321321321321";
+        var t1 = Date.UTC(2016,12,01,00,00,00);//北京时间2016-12-1 00:00:00
+        var t2 = Date.UTC(todayYear,todayMonth,todayDate,todayHour,todayMinute,todaySecond);
+        var diff = t2-t1;
+        var diffYears = Math.floor(diff/years);
+        var diffDays = Math.floor((diff/days)-diffYears*365);
+        var diffHours = Math.floor((diff-(diffYears*365+diffDays)*days)/hours);
+        var diffMinutes = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours)/minutes);
+        var diffSeconds = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours-diffMinutes*minutes)/seconds);
+        var finallyShowTime = "已运行"+diffYears+" 年 "+diffDays+" 天 "+diffHours+" 小时 "+diffMinutes+" 分钟 "+diffSeconds+" 秒";
         document.getElementById("runtime").innerHTML=finallyShowTime;
-        console.log(finallyShowTime);
     }
   setInterval('runTime();', 1000);
   console.log('end');
