--- a/_includes/visit-stat.html
+++ b/_includes/visit-stat.html
@@ -48,8 +48,10 @@
         seconds - 0-59之间的整数，做为date对象的秒数
         microseconds - 0-999之间的整数，做为date对象的毫秒数
         */
-        var t1 = Date.UTC(2016,12,01,00,00,00);//北京时间2016-12-1 00:00:00
-        var t2 = Date.UTC(todayYear,todayMonth,todayDate,todayHour,todayMinute,todaySecond);
+        //var t1 = Date.UTC(2016,12,01,00,00,00);//北京时间2016-12-1 00:00:00
+		    var t1 = new Date("2016/08/03 00:00:00")
+        //var t2 = Date.UTC(todayYear,todayMonth,todayDate,todayHour,todayMinute,todaySecond);
+		    var t2 = new Date(todayYear+"/"+todayMonth+"/"+todayDate+" "+todayHour+":"+todayMinute+":"+todaySecond)
         var diff = t2-t1;
         var diffYears = Math.floor(diff/years);
         var diffDays = Math.floor((diff/days)-diffYears*365);
