--- a/_includes/visit-stat.html
+++ b/_includes/visit-stat.html
@@ -21,8 +21,9 @@
 </div>
 {% endif %}
 
+<!-- 网站运行时间 -->
 <div>
-<span id="runtime">1002</span>
+<span id="runtime">1003</span>
 </div>
 <script type="text/javascript">
     function runTime(){
