--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,8 +1,8 @@
-<div style="margin-top:2em;padding:0 1.5em;border:1px solid #d3d3d3;background-color:#f1f4f7">
-  <h4>文档信息</h4>
-  <ul>
-    <li>本文作者：<a href="{{ site.url }}" target="_blank">{{ site.author }}</a></li>
-    <li>本文链接：<a href="{{ site.url }}{{ page.url }}" target="_blank">{{ site.url }}{{ page.url }}</a></li>
-    <li>版权声明：自由转载-非商用-非衍生-保持署名（<a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh" target="_blank">创意共享3.0许可证</a>）</li>
+<div style="margin-top:2em;padding:1em 1.5em;border:1px solid #d3d3d3;background-color:#f1f4f7">
+  <p>文档信息</p>
+  <ul style="font-size: 10px;">
+    <li>作者：<a href="{{ site.url }}" target="_blank">{{ site.author }}</a></li>
+    <li>链接：<a href="{{ site.url }}{{ page.url }}" target="_blank">{{ site.url }}{{ page.url }}</a></li>
+    <li>声明：自由转载-非商用-非衍生-保持署名（<a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh" target="_blank">创意共享3.0许可证</a>）</li>
   </ul>
 </div>
